@@ -1,6 +1,12 @@
 2006-01-13  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-extractor.c:
+	Remove the threading hacks, #define the element names, update code
+	for new API.
+
+2006-01-13  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extractor.c:
 	Fix cdparanoia check.
 
 2006-01-13  Ross Burton  <ross@burtonini.com>
